# WCWP

./: .gitignore  README.md  components.py  flake.nix  pyproject.toml  requirements.txt  run.py
.direnv/: flake-profile-1-link
static/: styles.css
steam/: __init__.py
